force-app/main/default/objects/Twilio_Auth_Setting__mdt/Twilio_Auth_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Twilio Auth Setting</label>
    <pluralLabel>Twilio Auth Settings</pluralLabel>
</CustomObject>