force-app/main/default/objects/Twilio_Auth_Setting__mdt/fields/Account_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone__c</fullName>
    <label>Account Phone</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>