force-app/main/default/objects/Twilio_Auth_Setting__mdt/fields/Account_SID__c.field-meta.xml
<CustomField>
    <fullName>Account_SID__c</fullName>
    <label>Account SID</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>