force-app/main/default/objects/Twilio_Auth_Setting__mdt/fields/Named_Cred_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_Cred_API_Name__c</fullName>
    <label>Named Cred API Name</label>
    <type>TextArea</type>
</CustomField>